bdr.BDR2.scala.error
Compilation error:
BDR2:4: error: ';' expected but 'match' found.
  c match {
    ^